<resources>
    <string name="app_name">TipTime</string>
    <string name="service_question">How was the service ?</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="service_twenty_percent">Amazing 20%</string>
    <string name="service_eighteen_percent">Good 18%</string>
    <string name="service_fifteen_percent">Ok 15%</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">calculate</string>
    <string name="tip_amount" formatted="true">Tip Amount</string>
</resources>